Add configurable `request_delay` support to server and models
