# optimade/models/optimade_json.py
@@ -4,7 +4,14 @@ from datetime import datetime
 from enum import Enum
 from typing import Any, Dict, List, Optional, Type, Union
 
-from pydantic import AnyHttpUrl, AnyUrl, BaseModel, EmailStr, root_validator
+from pydantic import (
+    AnyHttpUrl,
+    AnyUrl,
+    BaseModel,
+    EmailStr,
+    NonNegativeFloat,
+    root_validator,
+)
 
 from optimade.models import jsonapi
 from optimade.models.utils import SemanticVersion, StrictField
@@ -322,6 +329,11 @@ Hence, if the `meta` field of the JSON API links object is provided and contains
 
     response_message: Optional[str] = StrictField(
         None, description="response string from the server"
+    )
+
+    request_delay: Optional[NonNegativeFloat] = StrictField(
+        None,
+        description="A non-negative float giving time in seconds that the client is suggested to wait before issuing a subsequent request.",
     )
 
     implementation: Optional[Implementation] = StrictField(
